--- a/roles/smartmontools/tasks/02_setup_smartmontools.yml
+++ b/roles/smartmontools/tasks/02_setup_smartmontools.yml
@@ -32,7 +32,7 @@
     lineinfile:
       path: "/etc/smartd.conf"
       regexp: "^{{item}}"
-      line: "{{item}} -a -H -l error -l selftest -f -s (S/../.././02|L/../../6/03) -m root -M exec /usr/share/smartmontools/smartd-runner"
+      line: "{{item}} -a -H -l error -l selftest -f -s (S/../.././{{smartd_short_test_hour}}|L/../../6/{{smartd_long_test_hour}}) -m root -M exec /usr/share/smartmontools/smartd-runner"
       state: present
     loop: "{{disk_by_id|list}}"
 
