--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,6 +9,7 @@
   include_tasks: "{{task_names}}"
   tags: ["always"]
   loop:
+    - 01_install_hdd_temp.yml
     - 02_setup_smartmontools.yml
     - 02_setup_motd.yml
   loop_control:
