--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,5 +12,6 @@
     - 01_install_hdd_temp.yml
     - 02_setup_smartmontools.yml
     - 02_setup_motd.yml
+    - 03_updated_services_file.yml
   loop_control:
     loop_var: task_names
