--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,15 +25,15 @@ motd_entries:
   # The intent is to disable message files in ranges that will be applied below.
   # This allows message files removed from enable lists get disabled
   file_globs_to_disable:
-    - "10-*"
-    - "20-*"
-    - "30-*"
-    - "40-*"
-    - "50-*"
-    - "60-*"
+    - "1?-*"
+    - "2?-*"
+    - "3?-*"
+    - "4?-*"
+    - "5?-*"
+    - "6?-*"
 
-  # Define Custom Message of the Day files to ENABLE from the GIT Repo to all hosts
-  enable_these_for_all_hosts:
+# Define Custom Message of the Day files to ENABLE from the GIT Repo to all hosts
+enable_these_motd_files:
   #  - 10-hostname                 # Blah no color hostname
     - 10-hostname-color
     - 20-sysinfo
@@ -51,7 +51,7 @@ motd_entries:
 # within the Message of the Day screen.  This section to define a set of services to replace
 # the services which are hard coded.
 
-services_list_override_for_all_hosts:
+services_list_override:
   - "fail2ban"
   - "ufw"
   - "netdata"
