Shortened services list variable name

--- a/tasks/03_updated_services_file.yml
+++ b/tasks/03_updated_services_file.yml
@@ -7,7 +7,7 @@
     set_fact:
       services_list: "{{services_list|default('')}}\"{{item}}\" "
     with_items:
-      - "{{ services_list_override_for_all_hosts|default([]) }}"
+      - "{{ services_list_override|default([]) }}"
       - "{{ more_services_entries|default([]) }}"
 
   - name: Replace existing services list with custom list
