--- a/tasks/01_install_hdd_temp.yml
+++ b/tasks/01_install_hdd_temp.yml
@@ -23,13 +23,15 @@
 
   # Get the last device letter from each active device, this is needed for hddtmp monitoring
   # If "disk_devices" contains ['sda','sdb','sdc'] then device_letters is "abc"
+  # Devices ending in numbers like nvme1 which are not supported are skipped
   - name: Construct device letter string
     set_fact:
       device_letters: "{{device_letters|default('') + item[-1]}}"
     loop:
-     "{{disk_devices}}"
+      "{{disk_devices}}"
     loop_control:
       label: "{{disk_devices}}"
+    when: item[-1] | lower | regex_search("[a-z]")
 
   # hddtemp can only take a limited number of devices; which is a limit on the number of
   # parameters which can be passed via the command line.  Break up the disk device list 
@@ -38,6 +40,8 @@
   - name: "Chunk device letter string by {{hddtemp_num_devices}}"
     set_fact:
       device_letters: "{{ device_letters | regex_findall('.{1,' + hddtemp_num_devices|string +'}') }}"
+    when:
+      device_letters is defined
 
   - name: Creates @reboot CRON entry for HDDTemp instances
     cron:
@@ -49,6 +53,8 @@
     loop_control:
       index_var: hddtemp_num_instances
       label: "job: /usr/sbin/hddtemp -d /dev/sd[{{item}}]"
+    when:
+      device_letters is defined
 
   tags:
   - install_hdd_temp
