--- a/tasks/01_install_hdd_temp.yml
+++ b/tasks/01_install_hdd_temp.yml
@@ -1,3 +1,5 @@
+# HDDTemp project is dead and removed from Ubuntu Repository with 22.04
+
 - name: Install HDD Temp Block
   block:
 
@@ -7,8 +9,6 @@
       name: ['hddtemp']
       state: present
       install_recommends: no
-    when:
-      - ansible_os_family == "Debian"
 
   ###[ Configure HDDTemp ]#####################################################
 
@@ -56,5 +56,7 @@
     when:
       device_letters is defined
 
+  when:
+      - (ansible_distribution == "Ubuntu" and ansible_distribution_major_version < "22")  # HDD Temp removed from repos starting with 22.04
   tags:
   - install_hdd_temp
